# sdk-python

./: .editorconfig  .gitignore  CHANGELOG.md  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_chat_hello.py  02_streaming.py  03_embeddings.py  04_error_handling.py  05_sovereign.py
src/volt/: __init__.py  _client.py  _version.py  auth.py  chat.py  embeddings.py  errors.py  models.py  streaming.py  types.py
src/volt/_generated/: __init__.py
tests/: conftest.py  test_chat.py  test_errors.py  test_sovereignty.py
