[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volt"
dynamic = ["version"]
description = "Python SDK for Volt — the Sovereign Inference Cloud (Spark, Forge, Vault)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Volt", email = "platform@volt.cloud" }]
keywords = ["volt", "llm", "inference", "sovereign", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://volt.cloud"
Documentation = "https://docs.volt.cloud"
Source = "https://github.com/thevoltcloud/sdk-python"

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.8", "ruff>=0.5"]

[tool.hatch.version]
path = "src/volt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/volt"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long inline JSON fixtures

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/volt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
